--- a/assessment.html
+++ b/assessment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="twitter:card" content="summary" />
     <meta property="og:url"
-          content="https://PeachRapit1022.github.io/assessment/assessment.html"
+          content="https://peachrapit1022.github.io/assessment/assessment.html"
     />
     <meta property="og:title" content="あなたのいいところ診断" />
     <meta property="og:description"
